# quadcopter

./: Cargo.toml  build.rs  cart.toml
.cargo/: config
examples/: cart_telemetry.rs  simple_pid.rs
linux/modules/: .gitignore
linux/modules/lis3mdl_driver/: Makefile  iio_lis3mdl_spi.c  iio_lis3mdl_spi.h
proto/: telemetry.proto  telemetry_rpc.proto
src/: control_main.rs  lib.rs  main.rs  plottable.rs  vector3.rs
src/drivers/: bmp280.rs  lis3mdl.rs  lsm6dsv.rs  mod.rs  mpu6500.rs  mpu9250.rs
src/telemetry/: proto_plotter.rs  telemetry_server.rs
telemetry_plotter/: Cargo.toml
telemetry_plotter/src/: main.rs
